--- a/food-order/src/main/resources/application.properties
+++ b/food-order/src/main/resources/application.properties
@@ -14,4 +14,6 @@ eureka.client.serviceUrl.defaultZone = http://192.168.29.63:8761/eureka/
 spring.application.name = food-order-service
 
 
+#Testing the job
+
 
