--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
+# Test for sync between jenkin and git repository 
+
